# emzed

./: .gitattributes  .gitignore  2011-10-06_054_PKTB_alien_sample11(P-As_6min)_hypot.table  2011-10-06_054_PKTB_alien_sample11(P-As_6min)_mzalign.csv  Ideen  LICENSE  README  abundance.py  adducts.py  build_docs.sh  build_installer.py  config_logger.py  configs.py  convert_universals.py  db.py  deploy_installers.sh  eMZed.css  elements.py  emzed.bat  emzed.py  emzed.pyw  emzedPatches.py  emzed_old.pyw  example.csv  example_configs.py  examples.py  external_shell_patches.py  fast_tests.sh  fast_unittests.sh  fix_xcms.py  inspect_example.py  installConstants.py  kill_dangling_python.sh  load_ds.py  make_logo.py  mass.py  message.py  ms2feat.table  msWorkbench.bat  msWorkbench.py  (+12 more)
DataStructures/: Table.py  TableParser.py
FeatureExplorer/: TableDialog.py
NOTIZEN/: pythonwrapping
RConnect/: R.sh  RExecutor.py  XCMSConnector.py  __init__.py  centwave.txt  runR.py  test.r  utils.py
batches/: BatchRunner.py  _BatchRunner.py  __init__.py  alignment.py  feature_detector.py  peak_picker.py
concepts/: konzept_table_versions
demos/: demoWorkflowFrontendBuilder.py
doc_source/: batches.rst  conf.py  examples.py  first_steps.rst  images.rst  index.rst  information.csv  install.rst  intro.rst  ms.rst  tables.rst  terms.rst  tutorial.rst
downloader/: downloader.py
evaluation_openms_wrapping/minimal_cpp_example/dll_approach/: .CMakeLists.txt.swp  .cdll.cpp.swp  .python_wrapper.py.swp  BEOBACHTUNGEN  CMakeLists.txt  cdll.cpp  python_wrapper.py
evaluation_openms_wrapping/minimal_cpp_example/test_example_lib/: CMakeLists.txt  HOWTO  main.cpp
example_scripts/: demo_featuredetector.py  demo_matched_filter.py  dialog_builder_example.py  example1.mzXML  feature_detector.py  inspect_example.py  load_ds.py  metlin_query_example.py  run_xcms.py  show_featuretable.py  view_features.py
guidata/: __init__.py  config.py  configtools.py  disthelpers.py  gettext_helpers.py  guitest.py  hdf5io.py  qthelpers.py  qtwidgets.py  userconfig.py  utils.py
guiqwt/: __init__.py  _ext.pyd  _mandel.pyd  _scaler.pyd  annotations.py  baseplot.py  builder.py  colormap.py  config.py  cross_section.py  curve.py  debug.py  events.py  fit.py  geometry.py  histogram.py  image.py  interfaces.py  io.py  label.py  panels.py  plot.py  pyplot.py  qtdesigner.py  qthelpers.py  resizedialog.py  shapes.py  signals.py  styles.py  tools.py  transitional.py
installer/: README  build_installer.py  build_zip.py  installer.py
installer_files/: .gitignore  README  _installer.py  install.bat  installer.py  run_installer.py  run_installer_as_admin.py  version.py
ms/: align.py  (+19 more)
old_files/evaluation_openms_wrapping/minimal_cpp_example/dll_approach/: CMakeLists.txt
(+690 files in other folders)
